Upload to postgis works, still working on geoserver